<?xml version="1.0"?>
<package format="3">
  <name>ekf_config</name>
  <version>0.0.0</version>
  <description>EKF configuration package for RC car</description>

  <maintainer email="julian@todo.todo">julian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
